Now the updates use the merge of the entity manager