@@ -338,6 +338,49 @@
 		</profile>
 
 		<profile>
+			<id>jbossas-remote-6</id>
+			<dependencies>
+				<dependency>
+					<groupId>org.jboss.arquillian.container</groupId>
+					<artifactId>arquillian-jbossas-remote-6</artifactId>
+					<version>${arquillian.version}</version>
+					<scope>test</scope>
+				</dependency>
+				<dependency>
+					<groupId>org.jboss.jbossas</groupId>
+					<artifactId>jboss-as-client</artifactId>
+					<version>${jboss-as-client-6.version}</version>
+					<type>pom</type>
+					<scope>test</scope>
+				</dependency>
+			</dependencies>
+			<build>
+				<testResources>
+					<testResource>
+						<directory>src/test/resources</directory>
+					</testResource>
+					<testResource>
+						<directory>src/test/resources-jbossas</directory>
+					</testResource>
+				</testResources>
+				<plugins>
+					<plugin>
+						<artifactId>maven-surefire-plugin</artifactId>
+						<version>${surefire.version}</version>
+						<configuration>
+							<skip>false</skip>
+							<testNGArtifactName>none:none</testNGArtifactName>
+							<excludes>
+								<exclude>**/ftest/**</exclude>
+								<exclude>**/hexcodes/**</exclude>
+							</excludes>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+
+		<profile>
 			<id>jbossas-embedded-6</id>
 			<dependencies>
 				<dependency>
@@ -448,49 +491,6 @@
 		</profile>
 
 		<profile>
-			<id>jbossas-remote-6</id>
-			<dependencies>
-				<dependency>
-					<groupId>org.jboss.arquillian.container</groupId>
-					<artifactId>arquillian-jbossas-remote-6</artifactId>
-					<version>${arquillian.version}</version>
-					<scope>test</scope>
-				</dependency>
-				<dependency>
-					<groupId>org.jboss.jbossas</groupId>
-					<artifactId>jboss-as-client</artifactId>
-					<version>${jboss-as-client-6.version}</version>
-					<type>pom</type>
-					<scope>test</scope>
-				</dependency>
-			</dependencies>
-			<build>
-				<testResources>
-					<testResource>
-						<directory>src/test/resources</directory>
-					</testResource>
-					<testResource>
-						<directory>src/test/resources-jbossas</directory>
-					</testResource>
-				</testResources>
-				<plugins>
-					<plugin>
-						<artifactId>maven-surefire-plugin</artifactId>
-						<version>${surefire.version}</version>
-						<configuration>
-							<skip>false</skip>
-							<testNGArtifactName>none:none</testNGArtifactName>
-							<excludes>
-								<exclude>**/ftest/**</exclude>
-								<exclude>**/hexcodes/**</exclude>
-							</excludes>
-						</configuration>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-
-		<profile>
 			<id>glassfish-remote-3.1</id>
 			<dependencies>
 				<dependency>
@@ -594,6 +594,16 @@
 								<exclude>**/ftest/**</exclude>
 								<exclude>**/hexcodes/**</exclude>
 							</excludes>
+							<argLine>
+								-Xmx512m -XX:MaxPermSize=256m
+								-Djava.net.preferIPv4Stack=true
+								-Djava.util.logging.manager=org.jboss.logmanager.LogManager
+								-Djava.endorsed.dirs=${env.JBOSS_HOME}/lib/endorsed
+								-Djboss.home=${env.JBOSS_HOME}
+								-Djboss.boot.server.log.dir=${env.JBOSS_HOME}
+								<!-- -->
+								-Xrunjdwp:transport=dt_socket,address=8787,server=y,suspend=n
+							</argLine>
 						</configuration>
 					</plugin>
 					<plugin>
@@ -645,7 +655,6 @@
 				</plugins>
 			</build>
 		</profile>
-
 	</profiles>
 
 </project>
